--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,18 @@
-*{
+* {
     font-family: Helvetica;
 }
 
-body{
+body {
     padding: 15px;
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-a, input[type="submit"]{
-    background-color: #007BFF;
+a,
+input[type="submit"] {
+    background-color: #2c5f95;
     color: #FFF;
     padding: 10px 20px;
     border-radius: 5px;
@@ -22,6 +23,38 @@ a, input[type="submit"]{
     cursor: pointer;
 }
 
-a:hover, input[type="submit"]{
+a:hover,
+input[type="submit"] {
     opacity: 1;
+}
+
+form {
+    width: 300px;
+}
+
+form div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: .5rem;
+}
+
+form label {
+    font-weight: bold;
+    margin-bottom: .3em;
+}
+
+form input,
+form textarea {
+    padding: 5px;
+}
+
+#post-container, #comments-container{
+    border: 1px solid #255181;
+    height: auto;
+    margin: 30px 0;
+    padding-left: 12px;
+}
+
+#comments-container p{
+    color: #255181;
 }
